--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include("header", {}) %>
-<h1>Login</h1>
+<h1 style = "padding-left: 20px">Login</h1>
 <form method="post" action="/login">
   <label>Username: </label> <input type="text" name="user"><br>
   <label>Password: </label> <input type="password" name="pass"><br>
