--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,78 @@ a {
   color: #00B7FF;
 }
 .custom-navbar {
-  background-color: rgba(116, 181, 209, 0.466); /* Color de fondo con opacidad */
+  background-color: rgba(116, 181, 209, 0.466); /* Color de fondo  */
   }
+
+
+
+  /* Contenedor del formulario centrado */
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; /* Comienza cerca de la parte superior */
+  align-items: center;
+  height: 70vh; /* Ajusta la altura para centrar mejor */
+  margin-top: 5vh; /* Añade un margen superior para que no esté pegado arriba */
+}
+
+/* Estilos para el formulario */
+form {
+  background-color: #f5f5f5; 
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 400px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+input {
+  display: block;
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.submit-button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
+
+
+.gender-options {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 15px;
+  align-items: center;
+}
+
+.gender-options label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.gender-options input[type="radio"] {
+  margin-right: 5px; /* Espacio entre la casilla y el texto */
+}
+
+
+
 
