--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
 <%- include("header", {}) %>
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<h1 style = "text-align: center; margin-top: 20px"><%= title %></h1>
+<p style = "text-align: center; margin-top: 20px">Welcome to <%= title %></p>
 <%- include("footer", {}) %>
