--- a/views/our-team.ejs
+++ b/views/our-team.ejs
@@ -1,6 +1,31 @@
 <%- include("header", {user: user}) %>
-<h1 style = "padding-left: 20px">Our team</h1>
+<h1 style = "text-align: center; margin-top: 20px">Our team</h1>
 <p>This is our team, here you can see all the professionals that work with us.</p>
 
-
+<div class="container">
+    <div class="row">
+      <% if (doctors && doctors.length > 0) { %>
+        <% doctors.forEach(doctor => { %>
+          <div class="col-md-4">
+            <div class="card mb-4" style="padding: 15px; background-color: #f9f9f9;">
+              <!-- Mostrar la imagen del doctor -->
+              <% if (doctor.image) { %>
+                <img src="<%= doctor.image %>" alt="<%= doctor.name %>" class="card-img-top" style="width: 100%; height: 100%; max-height: 300px; object-fit: cover;">
+              <% } else { %>
+                  <img src="/uploads/default.png" alt="No Image Available" class="card-img-top" style="width: 100%; height: 100%; max-height: 300px; object-fit: cover;">
+              <% } %>
+              <div class="card-body">
+                <h5 class="card-title"><%= doctor.name %> <%= doctor.lastname %></h5>
+                <p class="card-text"><strong>Specialty:</strong> <%= doctor.specialty %></p>
+                <p class="card-text"><strong>License Number:</strong> <%= doctor.license_number %></p>
+                <p class="card-text"><strong>About me:</strong> <%= doctor.description %></p>
+              </div>
+            </div>
+          </div>
+        <% }) %>
+      <% } else { %>
+        <p>No doctors are available at the moment.</p>
+      <% } %>
+    </div>
+  </div>
 <%- include("footer", {}) %>
