--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,16 +1,39 @@
 <%- include("header", {}) %>
-<h1>Register</h1>
-<form method="post" action="/register">
-  <label>Name: </label> <input type="text" name="name"><br>
-  <label>Lastname: </label> <input type="text" name="lastname"><br>
-  <label>Date of birth: </label> <br>
-  <input type="date" name="dob" required><br>
-  <label>Gender: </label> <br>
-  <label><input type="checkbox" name="gender" value="Male"> Male</label>
-  <label><input type="checkbox" name="gender" value="Female"> Female</label><br>
-  <label>Phone number: </label> <input type="text" name="phone"><br>
-  <label>Username: </label> <input type="text" name="user"><br>
-  <label>Password: </label> <input type="password" name="pass"><br>
-  <button type="submit">Submit</button>
-</form>
+
+<h1 style="text-align: center; margin-top: 20px;">Register</h1>
+
+<div class = "form-container">
+  <form method="post" action="/register">
+    <label>Name: </label>
+    <input type="text" name="name" required><br>
+    
+    <label>Lastname: </label>
+    <input type="text" name="lastname" required><br>
+    
+    <label>Date of birth: </label> <br>
+    <input type="date" name="dob" required><br>
+    
+    <label>Gender: </label> <br>
+    <div class = "gender-options">
+      <label>
+        <input type="radio" name="gender" value="Male" required> Male
+      </label>
+      <label>
+        <input type="radio" name="gender" value="Female"> Female
+      </label><br>
+    </div>
+
+    <label>Phone number: </label> 
+    <input type="text" name="phone" required><br>
+    
+    <label>Username: </label> 
+    <input type="text" name="user" required><br>
+    
+    <label>Password: </label> 
+    <input type="password" name="password" required><br>
+
+        
+    <button type="submit" class = "submit-button">Submit</button>
+  </form>
+</div>
 <%- include("footer", {}) %>
