--- a/views/restricted.ejs
+++ b/views/restricted.ejs
@@ -1,4 +1,4 @@
 <%- include("header", {}) %>
-<h1>Restricted</h1>
-<p>Only accessible if logged.</p>
+<h1 style = "text-align: center; margin-top: 20px">Restricted</h1>
+<p style = "text-align: center; margin-top: 20px">Only accessible if logged.</p>
 <%- include("footer", {}) %>
