adding exercises of moca and some restrictions

--- a/views/patient-tests.ejs
+++ b/views/patient-tests.ejs
@@ -3,7 +3,7 @@
 
 
 <div class="button-container">
-  <a href="/create-doctor" class="custom-button">Perform test</a>
+  <a href="/mocatest" class="custom-button">Perform test</a> 
 </div>
 
 
