--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,8 +66,8 @@ form {
 .column h2 {
   font-size: 20px;
   margin-bottom: 20px;
-  text-align: center; /* Centrar títulos */
-  color: #007bff; /* Color azul */
+  text-align: center; 
+  color: #007bff; 
 }
 
 
@@ -170,6 +170,65 @@ input {
     flex-direction: column; /* Las columnas se apilan verticalmente */
     gap: 30px;
   }
+}
+
+.mocatest-container {
+  position: relative; /* Añadir posición relativa para posicionar las burbujas */
+  width: 100%;
+  height: 300px; /* Establecer una altura para el contenedor */
+}
+.bubble {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: lightsalmon;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-family: Verdana;
+  font-size: 20px;
+  position: absolute; 
+}
+
+.next-button {
+  width: 100px;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 75%
+}
+
+.next-button:hover {
+  background-color: #0056b3;
+}
+
+canvas {
+  border: 1px solid black;
+  cursor: crosshair;
+}
+
+
+.exercise-container {
+  display: flex;
+  justify-content: center;
+  gap: 100px; /* Espacio entre los grupos de imagen y texto */
+  top: 20%;
+}
+
+.image-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 
 
 
