--- a/views/mocatest.ejs
+++ b/views/mocatest.ejs
@@ -28,8 +28,8 @@
 
     <button onclick="showexercise1part2()" class = "next-button">Next</button>
 
-    <audio controls autoplay style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%)">
-        <source src="/moca audios/test1_part1.mp3" type="audio/mpeg" >
+    <audio id = "ex1 part1 bubbles" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%)">
+        <source src="/moca audios/ex1 part1 bubbles.mp3" type="audio/mpeg" >
     </audio>
      
 </div>
@@ -41,8 +41,8 @@
     <br>
     <button onclick="showexercise1part3()" class = "next-button">Next</button>
 
-    <audio controls autoplay style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
-        <source src="test1_part2.mp3" type="audio/mpeg" >
+    <audio id = "ex1 part2 cube" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex1 part2 cube.mp3" type="audio/mpeg" >
     </audio>
 
 </div>
@@ -53,56 +53,186 @@
     <br>
     
     <button onclick="showexercise2()" class = "next-button" >Next</button>
-    <audio controls autoplay style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
-        <source src="test1_part3.mp3" type="audio/mpeg" >
+    <audio id = "ex1 part3 clock" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex1 part3 clock.mp3" type="audio/mpeg" >
     </audio>
 
 </div>
 
-<div id="exercise2" style="display: none; position: relative; width: 100%; height: 500px;">
+<div id="exercise2" class = "exercise-container" style ="display: none; position: relative; width: 100%; height: 500px;">
     <h2 style="text-align: center; margin-top: 20px;">Exercise 2</h2>
 
-    <!-- Imagen y caja de texto del león -->
+   
     <img src="/moca images/lion.jpg" 
          style="width: 275px; height: 175px; position: absolute; top: 20%; left: 30%; transform: translateX(-50%);">
     <input type="text" id="textLion" placeholder="Write here" 
            style="position: absolute; top: 60%; left: 30%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
 
-    <!-- Imagen y caja de texto del rinoceronte -->
+    
     <img src="/moca images/rhino.jpg" 
          style="width: 275px; height: 175px; position: absolute; top: 20%; left: 50%; transform: translateX(-50%);">
     <input type="text" id="textRhino" placeholder="Write here" 
            style="position: absolute; top: 60%; left: 50%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
 
-    <!-- Imagen y caja de texto del camello -->
+    
     <img src="/moca images/camel.jpg" 
          style="width: 275px; height: 175px; position: absolute; top: 20%; left: 70%; transform: translateX(-50%);">
     <input type="text" id="textCamel" placeholder="Write here" 
            style="position: absolute; top: 60%; left: 70%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
 
-    <button id="next-exercise3-part1" onclick="showexercise3part1()" class = "next-button" >Next</button>
-    <!-- Audio -->
-    <audio controls autoplay style="position: absolute; top: 90%; left: 50%; transform: translateX(-50%);">
-        <source src="test1_part3.mp3" type="audio/mpeg">
+    <button onclick="showexercise3part1()" class = "next-button" >Next</button>
+    
+    <audio id = "ex2 animals" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%);">
+        <source src="/moca audios/ex2 animals.mp3" type="audio/mpeg">
     </audio>
 </div>
-
-
-
 
 
 
 <div id = "exercise3-part1" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 3 - Try 1</h2>
 
-    <button id="start-exercise3-part1" class = "next-button">Start</button>
-    <button id="stop-exercise3-part1" class = "next-button" disabled>Stop</button>
-    <button id="next-exercise3-part1" onclick="showexercise3part2()" class = "next-button" disabled>Next</button>
+    <button id="start-exercise3-part1" class = "next-button" style = "top: 50%; display: none;">Record</button>
+    <button id="stop-exercise3-part1" class = "next-button" style = "top: 50%; display: none;" >Record</button>
+    <button id="next-exercise3-part1" onclick="showexercise3part2()" class = "next-button" style = "display: none;" >Next</button>
+    <h4 id = "recordingStatus" style = "text-align: center; margin-top: 40px;"></h4>
     
-    <audio controls autoplay style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
-        <source src="test3_part1.mp3" type="audio/mpeg" >
+    <audio id="ex3 part1 memory" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex3 part1 memory.mp3" type="audio/mpeg" >
     </audio>
 
 </div>
+
+<div id = "exercise3-part2" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 3 - Try 2</h2>
+
+    <button id="start-exercise3-part2" class = "next-button" style = "top: 50%; display: none;">Record</button>
+    <button id="stop-exercise3-part2" class = "next-button" style = "top: 50%; display: none">Record</button>
+    <button id="next-exercise3-part2" onclick="showexercise4part11()" class = "next-button" style="display: none;">Next</button>
+    <h4 id = "recordingStatus" style = "text-align: center; margin-top: 40px;"></h4>
+    
+    <audio id = "ex3 part2 memory" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex3 part2 memory.mp3" type="audio/mpeg" >
+    </audio>
+
+
+</div>
+<!-- TODO: falta añadir el audio 3 de memoria -->
+
+<div id = "exercise4-part1-1" class = "exercise-container" style = "display: none;">
+    <audio id = "ex3 part3 memory" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex3 part3 memory.mp3" type="audio/mpeg" >
+    </audio>
+    
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 4 - Part 1.1</h2>
+    
+    <input type="text" id="forwardNumbers" placeholder="Write here" 
+           style="position: absolute; top: 50%; left: 50%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; display: none">
+
+    <button id = "next-exercise4-part11" onclick="showexercise4part12()" class = "next-button" style ="display: none;">Next</button>
+    
+    <audio id="ex4 part1 forward" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex4 part1 forward.mp3" type="audio/mpeg" >
+    </audio>
+</div>
+
+<div id = "exercise4-part1-2" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 4 - Part 1.2</h2>
+    
+    <input type="text" id="backwardNumbers" placeholder="Write here" 
+           style="position: absolute; top: 50%; left: 50%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; display: none;">
+
+    <button id = "next-exercise4-part12" onclick="showexercise4part2()" class = "next-button" style="display: none">Next</button>
+    
+    <audio id="ex4 part1 backward" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex4 part1 backward.mp3" type="audio/mpeg" >
+    </audio>
+</div>
+
+<div id = "exercise4-part2" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 4 - Part 2</h2>
+    
+    <div class="container">
+        <div id= "bubbleA" class="bubble" data-number="A" style="top: 200px; left: 50%; transform: translateX(-50%)">A</div>
+        <div class="label" style="font-family: Verdana; position: absolute; top: 250px; left: 50%; transform: translateX(-50%)">Press here whenever you here letter A</div>
+    </div>
+
+    <button id = "next-exercise4-part12" onclick="showexercise4part3()" class = "next-button">Next</button>
+    
+    <audio id="ex4 part2 clickedAs" id = "audio_test_part2" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex4 part2 clickedAs.mp3" type="audio/mpeg" >
+    </audio>
+</div>
+
+<div id = "exercise4-part3" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 4 - Part 3</h2>
+
+    <input type="text" id="substraction" placeholder="Next substraction" 
+    style="position: absolute; top: 50%; left: 50%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+
+    <button id = "nextsubstraction" onclick="saveSubstraction()" class = "next-button">Next</button>
+    <!-- <button id = "nextex5part11" onclick="showexercise5part11()" class = "next-button" style = "display:none;">Go</button> -->
+
+    <audio id="ex4 part3 substraction" id = "audio_test_part2" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex4 part3 substraction.mp3" type="audio/mpeg" >
+    </audio>
+</div>
+
+<div id = "exercise5-part11" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 5 - Part 1.1</h2>
+
+    <button id="start-exercise5-part11" class = "next-button" style = "top: 50%; display: none;">Record</button>
+    <button id="stop-exercise5-part11" class = "next-button" style = "top: 50%; display: none">Record</button>
+    <button id="next-exercise5-part11" onclick="showexercise5part12()" class = "next-button" style="display: none;">Next</button>
+    <h4 id = "recordingStatus" style = "text-align: center; margin-top: 40px;"></h4>
+    
+    <audio id = "ex5 part1 sentence1" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex5 part1 sentence1.mp3" type="audio/mpeg" >
+    </audio>
+
+</div>
+
+<div id = "exercise5-part12" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 5 - Part 1.2</h2>
+
+    <button id="start-exercise5-part12" class = "next-button" style = "top: 50%; display: none;">Record</button>
+    <button id="stop-exercise5-part12" class = "next-button" style = "top: 50%; display: none">Record</button>
+    <button id="next-exercise5-part12" onclick="showexercise5part2()" class = "next-button" style="display: none;">Next</button>
+    <h4 id = "recordingStatus" style = "text-align: center; margin-top: 40px;"></h4>
+    
+    <audio id = "ex5 part1 sentence2" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex5 part1 sentence2.mp3" type="audio/mpeg" >
+    </audio>
+
+</div>
+
+<div id = "exercise5-part2" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 5 - Part 2</h2>
+
+    <button id="start-exercise5-part2" class = "next-button" style = "top: 40%; display: block;">Start</button>
+    <h3 style="text-align: center; position: absolute; top: 45%; left: 50%; transform: translateX(-50%);font-size: 150px;">F</h3>
+    <h4 id = "recordingStatus" style = "text-align: center; margin-top: 40px;"></h4>
+    <p id="timer" style="text-align: center; position: absolute; top: 70%; left: 50%; transform: translateX(-50%) ">01:00</p>
+
+    <button id="next-exercise5-part2" onclick="showexercise6()" class = "next-button" style="display: none;">Next</button>
+
+    <audio id = "ex5 part2 fwords" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex5 part2 fwords.mp3" type="audio/mpeg" >
+    </audio>
+
+</div>
+
+<div id = "exercise6" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 6</h2>
+</div>
+
+
+
+
+
+
+
+
   
 
 
