All exercises included! Next step: save results into a zip in db

--- a/views/mocatest.ejs
+++ b/views/mocatest.ejs
@@ -269,12 +269,126 @@
 
 <div id = "exercise7-part2" class = "exercise-container" style = "display: none;">
     <h2 style="text-align: center; margin-top: 20px;">Exercise 7</h2>
+    
+    <input type="text" id="ex7part2word1" placeholder="Write here" 
+    style="position: absolute; top: 40%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 40%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Body part</div>
+
+    <input type="text" id="ex7part2word2" placeholder="Write here" 
+    style="position: absolute; top: 45%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 45%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Fabric</div>
+
+    <input type="text" id="ex7part2word3" placeholder="Write here" 
+    style="position: absolute; top: 50%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 50%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Building</div>
+
+    <input type="text" id="ex7part2word4" placeholder="Write here" 
+    style="position: absolute; top: 55%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 55%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Flower</div>
+
+    <input type="text" id="ex7part2word5" placeholder="Write here" 
+    style="position: absolute; top: 60%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 60%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Color</div>
+
+    <button id="next-exercise7-part2" onclick="showexercise7part3()" class = "next-button" style="display: block;">Next</button>
+
+    <audio id = "ex7 part2 delayedrecall" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex7 part2 delayedrecall.mp3" type="audio/mpeg" >
+    </audio>
+
+</div>
+
+
+<div id = "exercise7-part3" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 7</h2>
+    
+    <input type="text" id="ex7part3word1" placeholder="Write here" 
+    style="position: absolute; top: 40%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 40%; left: 40%; transform: translateX(-50%); width: 300px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Nose, face, hand, shoulder, leg</div>
+
+    <input type="text" id="ex7part3word2" placeholder="Write here" 
+    style="position: absolute; top: 45%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 45%; left: 40%; transform: translateX(-50%); width: 300px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Denim, velvet, cotton, nylon, silk</div>
+
+    <input type="text" id="ex7part3word3" placeholder="Write here" 
+    style="position: absolute; top: 50%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 50%; left: 40%; transform: translateX(-50%); width: 300px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Church, school, hospital, library, store</div>
+
+    <input type="text" id="ex7part3word4" placeholder="Write here" 
+    style="position: absolute; top: 55%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 55%; left: 40%; transform: translateX(-50%); width: 300px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Rose, daisy, tulip, lily, daffodil”, </div>
+
+    <input type="text" id="ex7part3word5" placeholder="Write here" 
+    style="position: absolute; top: 60%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 60%; left: 40%; transform: translateX(-50%); width: 300px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Red, blue, green, yellow, purple</div>
+
+    <button id="next-exercise7-part3" onclick="showexercise8part1()" class = "next-button" style="display: block;">Next</button>
+
+    <audio id = "ex7 part3 delayedrecall" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex7 part3 delayedrecall.mp3" type="audio/mpeg" >
+    </audio>
+
 </div>
 
 <div id = "exercise8-part1" class = "exercise-container" style = "display: none;">
     <h2 style="text-align: center; margin-top: 20px;">Exercise 8</h2>
+    <h3 style="text-align: center; margin-top: 40px;">What day is it today?</h2>
+    
+    <input type="text" id="ex8part1date" placeholder="Write here" 
+    style="position: absolute; top: 40%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">        
+    <div class = "text-box" style = "position: absolute; top: 40%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Complete date</div>
+    
+    <input type="text" id="ex8part1year" placeholder="Write here" 
+    style="position: absolute; top: 45%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 45%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Year</div>
+    
+    <input type="text" id="ex8part1month" placeholder="Write here" 
+    style="position: absolute; top: 50%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">        
+    <div class = "text-box" style = "position: absolute; top: 50%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Month</div>
+    
+    <input type="text" id="ex8part1day" placeholder="Write here" 
+    style="position: absolute; top: 55%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 55%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Day of the week</div>
+    
+    <button id="next-exercise8-part1" onclick="showexercise8part2()" class = "next-button" style="display: block;">Next</button>
+
+    <audio id = "ex8 part1 date" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex8 part1 date.mp3" type="audio/mpeg" >
+    </audio>
 </div>
 
+
+<div id = "exercise8-part2" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Exercise 8</h2>
+    <h3 style="text-align: center; margin-top: 40px;">Where are you?</h2>
+    
+    
+    <input type="text" id="ex8part2place" placeholder="Write here" 
+    style="position: absolute; top: 45%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">
+    <div class = "text-box" style = "position: absolute; top: 45%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Place</div>
+    
+    <input type="text" id="ex8part2city" placeholder="Write here" 
+    style="position: absolute; top: 50%; left: 60%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center;">        
+    <div class = "text-box" style = "position: absolute; top: 50%; left: 40%; transform: translateX(-50%); width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">City</div>
+    
+    
+    <button id="next-exercise8-part2" onclick="finishTest()" class = "next-button" style="display: block;">Next</button>
+
+    <audio id = "ex8 part2 place" style="position: absolute; top: 85%; left: 50%; transform: translateX(-50%); ">
+        <source src="/moca audios/ex8 part2 place.mp3" type="audio/mpeg" >
+    </audio>
+</div>
+
+<div id = "finishTest" class = "exercise-container" style = "display: none;">
+    <h2 style="text-align: center; margin-top: 20px;">Thank you for completing your test.</h2>
+    <h3 style="text-align: center; margin-top: 40px;">
+        Your doctor will carefully review your results, and they will be shared with you afterward.<br>
+        If you have any questions in the meantime, please don't hesitate to reach out.
+    </h3>
+      
+
+    
+</div>
 
 
 
