doctor view patients with an alert for new tests

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,7 +22,7 @@
               <% } %>
               <% if (user.role == 'Doctor') { %> <!-- si hay un doctor-->
                   <li class="nav-item">
-                    <a class="nav-link" href="/myprofile">View my patients</a>
+                    <a class="nav-link" href="/doctor-viewpatients">View my patients</a>
                   </li>
               <% } %>
                 <% if (user.role == 'Patient') { %> <!-- si hay un paciente-->
