--- a/views/myprofile.ejs
+++ b/views/myprofile.ejs
@@ -2,6 +2,24 @@
 
 <h1 style = "text-align: center; margin-top: 20px">My profile</h1>
 
+<% if (user.role == 'Administrator'){%>
+    <div class="button-container">
+        <a href="/update-profile" class="custom-button">Update profile</a>
+      </div>
+    
+    <div class = "container mt-5">
+        <div class="card mb-5 p-4 shadow-sm" style="border-radius: 15px;">
+            <div class="row align-items-center g-0">
+                <div class="col-md-9">
+                    <div class="card-body">
+                        <h3 class="card-title mb-3"><strong>Username:</strong> <%= user.username %></h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<% } %>
 
 <% if (user.role == 'Patient'){%>
     <div class="button-container">
