--- a/views/adminviewdoctor.ejs
+++ b/views/adminviewdoctor.ejs
@@ -7,7 +7,7 @@
             <!-- Columna para la imagen -->
             <div class="col-md-3 text-center">
                 <% if (doctor.image) { %>
-                    <img src="/<%= doctor.image %>" alt="<%= doctor.name %>" class="rounded-circle" style="width: 200px; height: 200px; object-fit: cover; margin-right: 15px;">
+                    <img src="<%= doctor.image %>" alt="<%= doctor.name %>" class="rounded-circle" style="width: 200px; height: 200px; object-fit: cover; margin-right: 15px;">
                 <% } else { %>
                     <img src="/uploads/default.png" class="img-fluid rounded-start" alt="Default image">
                 <% } %>
