--- a/views/myprofile.ejs
+++ b/views/myprofile.ejs
@@ -56,7 +56,7 @@
             <div class="row align-items-center g-0">
                 <div class="col-md-3 text-center">
                     <% if (doctor.image) { %>
-                        <img src="/<%= doctor.image %>" alt="<%= doctor.name %>" class="rounded-circle" style="width: 200px; height: 200px; object-fit: cover; margin-right: 15px;">
+                        <img src="<%= doctor.image %>" alt="<%= doctor.name %>" class="rounded-circle" style="width: 200px; height: 200px; object-fit: cover; margin-right: 15px;">
                     <% } else { %>
                         <img src="/uploads/default.png" class="img-fluid rounded-start" alt="Default image">
                     <% } %>
