--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -184,11 +184,23 @@ input {
   }
 }
 
-.mocatest-container {
-  position: relative; /* Añadir posición relativa para posicionar las burbujas */
-  width: 100%;
-  height: 300px; /* Establecer una altura para el contenedor */
+
+.exercise-container {
+  position: relative;
+  padding: 10px;
+  box-sizing: border-box;
+  max-height: 80vh;
 }
+
+
+.mocatest-container {
+  position: relative; /*para poder colocar las bubbles*/
+  width: 100%;
+  max-width: 600px;
+  height: 70vh;
+  margin: 0 auto;
+}
+
 .bubble {
   width: 50px;
   height: 50px;
@@ -201,9 +213,96 @@ input {
   font-family: Verdana;
   font-size: 20px;
   position: absolute; 
+  transform: translateX(-50%); 
+}
+/*new */
+.bubblelabel {
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 0.8rem;
+  font-family: Verdana, sans-serif;
+  text-align: center;
+
 }
 
+.notes {
+  padding: 2vw;
+  max-width: 600px;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  text-align: left;
+  font-size: clamp(0.7rem, 2vw, 1rem); /* Se adapta según el ancho de la pantalla */
+  line-height: 1.5;
+  color: #000;
+  position: absolute;
+}
+
+/*all new*/
+.animals-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px 10px;
+  position: relative;
+}
+
+.animal-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
+}
+
+.animal-block img {
+  width: 100%;
+  height: 180px;
+  object-fit: content;
+}
+
+.animal-block input {
+  margin-top: 10px;
+  width: 100%;
+  padding: 8px;
+  text-align: center;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+
+@media(max-width: 768px){
+  .animals-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .animal-block{
+    width: 90%;
+    max-width: 400px;
+  }
+}
+
+
+.abstraction-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px; 
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; 
+  gap: 20px;
+}
+
+
+/*until here*/
+
+
 .next-button {
+  min-width: 100px;
   width: 100px;
   padding: 10px;
   background-color: #007bff;
@@ -211,9 +310,9 @@ input {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  position: absolute;
-  left: 50%;
+  position: absolute; 
   transform: translateX(-50%);
+  left: 50%;
   top: 75%
 }
 
