--- a/views/create-doctor.ejs
+++ b/views/create-doctor.ejs
@@ -17,7 +17,7 @@
         <input type="radio" name="specialty" value="neurology" required> Neurology
       </label>
       <label>
-        <input type="radio" name="gender" value="psicology"> Psicology
+        <input type="radio" name="gender" value="psycology"> Psicology
       </label><br>
     </div>
 
