--- a/views/our-team.ejs
+++ b/views/our-team.ejs
@@ -1,6 +1,6 @@
 <%- include("header", {user: user}) %>
 <h1 style = "text-align: center; margin-top: 20px">Our team</h1>
-<p>This is our team, here you can see all the professionals that work with us.</p>
+<p style = "text-align: center; font-size: 18px;">This is our team, here you can see all the professionals that work with us.</p>
 
 <div class="container">
     <div class="row">
