--- a/views/update-profile.ejs
+++ b/views/update-profile.ejs
@@ -71,15 +71,15 @@
                           <input type="radio" name="specialty" value="neurology"> Neurology
                         </label>
                         <label>
-                          <input type="radio" name="specialty" value="psicology"> Psicology
+                          <input type="radio" name="specialty" value="psycology"> Psycology
                         </label><br>
                     </div>
 
                     <label>Description: </label> 
-                    <input type="text" name="description" required><br>
+                    <input type="text" name="description"><br>
 
                     <label>Image: </label> 
-                    <input type="file" name="image" accept="image/*" required>
+                    <input type="file" name="image" accept="image/*">
                 </div>
                 
                 <div class = "column">
