--- a/views/mocatest.ejs
+++ b/views/mocatest.ejs
@@ -255,7 +255,7 @@
         </div>
 
         <div class = "row">
-            <div class = "text-box" style = "width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Train - Bycicle</div>
+            <div class = "text-box" style = "width: 200px; height: 30px; text-align: center; border: 1px solid gray;background-color:white; border-radius: 5px;">Train - Bicycle</div>
             <input type="text" id="textTransport" placeholder="Write here" style="width: 200px; height: 30px; text-align: center;">
         </div>
 
